syntax = "proto3";

package meshtrade.account.v1;

import "meshtrade/account/v1/account.proto";

option go_package = "github.com/meshtrade/api/go/account/v1";

// Service provides RPCs for interacting with accounts.
service Service {
  // GetAccount retrieves a single account by its unique number.
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);
}

// GetAccountRequest is the message sent to the GetAccount RPC
message GetAccountRequest {
  // The unique identifier for the account to be retrieved.
  string number = 1;
}

// GetAccountResponse is the message returned from the GetAccount RPC.
message GetAccountResponse {
  // The retrieved account resource.
  meshtrade.account.v1.Account account = 1;
}
